fix(home): Fixed alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,16 +194,18 @@ hr {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-color: #54ccff;
+  background-image: linear-gradient(to right, #27AAE1 0%, #54ccff 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
-  margin: 0;
+  margin-left: 42%;
+  margin-top: 20px;
   font-size: 15px;
   font-weight: 500;
   border-radius: 25px;
   transition: all 0.5s linear;
   border: 0;
+
 }
 
 .btn-custom:hover,
@@ -213,7 +215,8 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #27AAE1;
+
 }
 
 .btn:active,
@@ -246,6 +249,9 @@ a:focus,
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  height: 100vh;
+  overflow: hidden;
+  background-repeat: no-repeat;
 }
 
 .intro .overlay {
@@ -254,12 +260,13 @@ a:focus,
 
 .intro h1 {
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: #ffffff;
+  text-shadow: 1px 1px 3px rgb(255, 255, 255), -1px -1px 3px rgb(255, 255, 255);
   font-size: 82px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 0px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .intro h1 span {
@@ -270,15 +277,15 @@ a:focus,
 .intro p {
   color: #fff;
   font-size: 22px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 30px;
   margin: 0 auto;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 
 header .intro-text {
-  padding-top: 350px;
-  padding-bottom: 200px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   text-align: center;
 }
 
